--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.22.5",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
@@ -32,6 +34,7 @@
     "git-commit-msg-linter": "^5.0.4",
     "husky": "^8.0.3",
     "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.1",
     "prettier": "3.0.0"
   }
 }
