--- a/package.json
+++ b/package.json
@@ -14,23 +14,24 @@
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6",
-    "styled-components": "^6.0.5"
+    "styled-components": "^6.0.5",
+    "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@types/node": "20.4.4",
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
-    "eslint": "^8.45.0",
-    "eslint-config-next": "13.4.12",
     "@babel/preset-typescript": "^7.22.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.3",
+    "@types/node": "20.4.4",
+    "@types/pretty-format": "^24.3.0",
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "babel-plugin-styled-components": "^2.1.4",
+    "eslint": "^8.45.0",
+    "eslint-config-next": "13.4.12",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.0",
@@ -39,6 +40,8 @@
     "husky": "^8.0.3",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
-    "prettier": "3.0.0"
+    "jest-styled-components": "^7.1.1",
+    "prettier": "3.0.0",
+    "pretty-format": "^29.6.1"
   }
 }
