--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "next": "13.4.12",
+    "next-pwa": "^5.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.0.5",
